--- a/index.css
+++ b/index.css
@@ -9,12 +9,18 @@ body {
     text-transform: uppercase;
     background-color: #000000;
     background-image: url("img/Layer1.png");
-    backgroung-position: top center;
+    background-position: top center;
     background-repeat: no-repeat;
 }
 
 a {
     text-decoration: none;
+    color: white;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
 }
 
 .visually-hidden {
@@ -36,6 +42,10 @@ a {
     text-transform: uppercase;
     background-color: #000000;
     border: none;
+
+    display: inline-block;
+    margin-right: 16px;
+    padding: 10px 30px;
 }
 
 .button:hover,
@@ -44,11 +54,49 @@ a {
     background-color: #663d15;
 }
 
+.button.disabled,
+.button:disabled {
+    cursor: default;
+    opacity: 0.5;
+    background-color: #000000
+}
+
+.container,
+.main-content,
+.main-footer {
+    width: 940px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+
 .main-navigation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     font-size: 16px;
     line-height: 20px;
     color: #ffffff;
+}
+
+.main-header-logo {
+    order: 2;
+    width: 368px;
+    height: 153px;
+    margin-top: 60px;
+    margin-bottom: 80px;
+
+}
+
+.main-navigation-wrapper {
+    width: 100%;
+    /* margin-bottom: 60px; */
     background-color: #000000;
+}
+
+.main-navigation-wrapper .container {
+    display: flex;
+    justify-content: space-between;
 }
 
 .site-navigation,
@@ -56,9 +104,43 @@ a {
     list-style: none;
 }
 
-.site-navigation a,
-.user-navigation a {
-    color: #ffffff;
+.site-navigation {
+    width: 620px;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.user-navigation {
+    max-width: 140px;
+}
+
+.user-navigation .login-link {
+    padding-left: 50px;
+    position: relative;
+}
+
+.login-link::before {
+    content: "";
+    position: absolute;
+    top: 25px;
+    left: 25px;
+
+    background-image: url("svg/login.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+
+    width: 16px;
+    height: 18px;
+
+    opacity: 0.3
+}
+
+.login-link:hover::before,
+.login-link:focus::before,
+.login-link:active::before {
+    opacity: 1;
 }
 
 .site-navigation a:hover,
@@ -68,20 +150,61 @@ a {
     background-color: #242424;
 }
 
+.site-navigation a,
+.user-navigation a {
+    display: block;
+    padding: 25px 20px;
+
+    color: #ffffff;
+}
+
 .feature-list {
+    display: flex;
+    justify-content: space-between;
     list-style: none;
 }
 
 .feature-item {
     text-align: center;
+    width: 300px;
+    margin-bottom: 70px;
 }
 
 .feature-item h3 {
     font-size: 30px;
     line-height: 42px;
+
+    margin: 0;
+    margin-bottom: 60px;
+
+    position: relative;
+}
+
+.feature-item h3::after {
+    content: "";
+
+    position: absolute;
+    bottom: -30px;
+    left: 50%;
+    margin-left: -10px;
+
+    transform: rotate(45deg);
+
+    width: 20px;
+    height: 20px;
+
+    background-color: #ffffff;
+}
+
+.feature-item p {
+    margin: 0 10px;
 }
 
 .index-columns {
+    display: flex;
+    justify-content: space-between;
+    padding: 50px 80px;
+    margin-bottom: 35px;
     color: #000000;
     background-color: #f8f5f2;
     background-image: url("img/Layer3.png");
@@ -90,19 +213,177 @@ a {
 }
 
 .index-columns h2 {
+    margin: 0;
+    margin-bottom: 25px;
+
     font-size: 30px;
     line-height: 42px;
 }
 
+.news {
+    width: 380px;
+}
+
 .news-list {
+    margin: 0;
+    margin-bottom: 25px;
+    padding: 0px;
+
     list-style: none;
+}
+
+.news-items {
+    margin-bottom: 25px;
+}
+
+.news-items p {
+    margin: 0;
 }
 
 .news-item time {
     text-transform: none;
 }
 
-.galary-content {
+.gallary {
+    width: 300px;
+}
+
+.gallary-content {
     background-color: #cccccc;
     border: 7px solid #ffffff;
+
+    margin: 0;
+    height: 164px;
+}
+
+.gallary-content img {
+    width: 286px;
+    height: 164px;
+}
+
+.gallary-container {
+    position: relative;
+    height: 260px;
+}
+
+.gallary-button {
+    box-sizing: border-box;
+    position: absolute;
+
+    width: 140px;
+    margin: 0px;
+}
+
+.gallary-button-next {
+    left: 0;
+}
+
+.gallary-button-back {
+    right: 0;
+}
+
+.contacts {
+    width: 380px;
+}
+
+.contacts p {
+    margin: 0;
+    margin-bottom: 25px;
+}
+
+.appointment {
+    width: 300px;
+}
+
+.appointment-info {
+    margin: 0;
+    margin-bottom: 15px;
+}
+
+.appointment-form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.appointment-item {
+    width: 150px;
+    margin: 0;
+    margin-bottom: 10px;
+}
+
+.appointment-item label {
+    display: block;
+    margin-bottom: 9px;
+    margin-left: 15px;
+}
+
+.appointment-item input {
+    box-sizing: border-box;
+    width: 140px;
+    padding-top: 8px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 7px;
+
+    font: inherit;
+
+    background-color: transparent;
+    border: 2px solid #000000;
+}
+
+.appointment-item input:focus {
+    border-color: #663d15;
+}
+
+.appointment .button {
+    display: block;
+    width: 100%;
+    margin-top: 10px;
+    margin-right: 0;
+}
+
+.main-footer {
+    padding: 0;
+    padding-top: 65px;
+    padding-bottom: 45px;
+    display: flex;
+    background-color: #262626;
+    align-items: center;
+}
+
+.footer-contacts a{
+    text-decoration: underline;
+}
+
+.footer-contacts {
+    width: 320px;
+    margin: 0px;
+    margin-right: 80px;
+
+}
+
+.footer-social {
+    width: 140px;
+    margin: 0px;
+}
+
+.footer-social ul {
+    list-style: none;
+    display: flex;
+    width: 140px;
+}
+
+.social-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 43px;
+    height: 43px;
+}
+
+.footer-copyright {
+    width: 140px;
+    margin: 0px;
+    margin-left: auto;
 }
